--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies: # 生产环境需要使用的库
   flutter_swiper : ^1.1.6
   flutter_screenutil: ^1.0.2
   url_launcher: ^5.4.2
+  flutter_easyrefresh: ^2.0.9
 
 dev_dependencies: # 开发时使用的库
   flutter_test:
