--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies: # 生产环境需要使用的库
   flutter_easyrefresh: ^2.0.9
   # https://pub.dev/packages/provider
   provider: ^4.0.4
+  # https://github.com/PonnamKarthik/FlutterToast
+  fluttertoast: ^3.1.3
 
 dev_dependencies: # 开发时使用的库
   flutter_test:
