--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies: # 生产环境需要使用的库
   provider: ^4.0.4
   # https://github.com/PonnamKarthik/FlutterToast
   fluttertoast: ^3.1.3
+  # https://github.com/theyakka/fluro
+  fluro: "^1.5.2"
 
 dev_dependencies: # 开发时使用的库
   flutter_test:
