--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,13 @@ dependencies: # 生产环境需要使用的库
   dio_cookie_manager: 1.0.0
   # https://github.com/flutterchina/cookie_jar
   cookie_jar: ^1.0.0
+  # https://github.com/best-flutter/flutter_swiper 这个库有问题，后面换个...
   flutter_swiper : ^1.1.6
+  # https://github.com/OpenFlutter/flutter_screenutil
   flutter_screenutil: ^1.0.2
+  # https://github.com/LampeMW/url_launcher
   url_launcher: ^5.4.2
+  # https://github.com/xuelongqy/flutter_easyrefresh
   flutter_easyrefresh: ^2.0.9
   # https://pub.dev/packages/provider
   provider: ^4.0.4
@@ -38,6 +42,8 @@ dependencies: # 生产环境需要使用的库
   fluttertoast: ^3.1.3
   # https://github.com/theyakka/fluro
   fluro: "^1.5.1"
+  # https://github.com/Sub6Resources/flutter_html
+  flutter_html: ^0.11.1
 
 dev_dependencies: # 开发时使用的库
   flutter_test:
