--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies: # 生产环境需要使用的库
   fluro: "^1.5.1"
   # https://github.com/Sub6Resources/flutter_html
   flutter_html: ^0.11.1
+  # https://pub.dev/packages/shared_preferences
+  shared_preferences: 0.5.6+2
 
 dev_dependencies: # 开发时使用的库
   flutter_test:
